[tool.poetry]
name = "scarceimpoliteplane"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydub = "^0.24.1"
SpeechRecognition = "^3.8.1"
sounddevice = "^0.4.1"
wavio = "^0.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
